--- a/index.html
+++ b/index.html
@@ -9,23 +9,40 @@
     <style>
         body {
             display: flex;
+            flex-direction: row; /* Ensure row direction for body */
             margin: 0;
             height: 100vh;
             font-family: Arial, sans-serif;
+            overflow: hidden;
         }
         .sidebar {
             width: 20%;
             background-color: #f8f8f8;
             padding: 20px;
             box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-            position: fixed;
             height: 100%;
             overflow: auto;
+            position: fixed;
+            transition: transform 0.3s ease-in-out;
+            z-index: 1000;
+        }
+        .sidebar.hidden {
+            transform: translateX(-100%);
+        }
+        .hamburger {
+            display: none;
+            font-size: 30px;
+            cursor: pointer;
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 1100;
         }
         .content {
-            width: 80%;
+            flex: 1;
             margin-left: 20%;
             padding: 20px;
+            overflow: auto;
         }
         #plot-container {
             width: 100%;
@@ -51,11 +68,46 @@
         .legend-item.deselected {
             opacity: 0.3;
         }
+        @media (max-width: 1200px) {
+            .content {
+                margin-left: 20%;
+                width: 80%;
+            }
+            .sidebar {
+                transform: translateX(0);
+            }
+            .hamburger {
+                display: none;
+            }
+        }
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 70%;
+                transform: translateX(-100%);
+            }
+            .content {
+                width: 100%;
+                margin-left: 0;
+                padding: 20px;
+            }
+            .hamburger {
+                display: block;
+            }
+            h1 {
+                margin-top: 60px; /* Ensure header doesn't overlap the hamburger menu */
+            }
+        }
+        @media (max-width: 480px) {
+            .sidebar {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="sidebar">
-        <h1>Simplex transforms results</h1>
+    <div class="hamburger" onclick="toggleSidebar()">&#9776;</div>
+    <div class="sidebar" id="sidebar">
+        <h1>Interactive Data Visualization</h1>
         <div>
             <label for="columnSelect">Select Column:</label>
             <select id="columnSelect">
@@ -93,6 +145,17 @@
     </div>
 
     <script>
+        function toggleSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            const isHidden = sidebar.classList.contains('hidden');
+            if (isHidden) {
+                sidebar.style.transform = 'translateX(0)';
+            } else {
+                sidebar.style.transform = 'translateX(-100%)';
+            }
+            sidebar.classList.toggle('hidden');
+        }
+
         d3.csv("results/summaries/all.csv").then(data => {
             const transformOrder = [
                 'ALR', 'ILR', 'ExpandedSoftmax', 'NormalizedExponential',
@@ -112,9 +175,11 @@
                 // Get unique target_config and target values for subplots
                 const uniqueConfigs = [...new Set(filteredData.map(row => `${row.target} ${row.target_config}`))];
 
-                // Create subplots
-                const rows = Math.ceil(uniqueConfigs.length / 3);
-                const cols = 3;
+                // Determine number of rows based on screen width
+                const isMobile = window.innerWidth <= 768;
+                const isNarrow = window.innerWidth <= 1200;
+                const cols = isMobile ? 1 : isNarrow ? 2 : 3;  // Adjust number of columns
+                const rows = Math.ceil(uniqueConfigs.length / cols);
 
                 const fig = {
                     data: [],
@@ -122,8 +187,8 @@
                         grid: { rows: rows, columns: cols, pattern: 'independent', roworder: 'top to bottom' },
                         title: `${selectedColumn} vs transform`,
                         showlegend: false, // Disable legend in the plot
-                        height: rows * 200,  // Adjust height to make subplots taller
-                        margin: { l: 80, r: 20, b: 40, t: 50 },  // Adjust margins to ensure titles are visible
+                        height: rows * 300,  // Adjust height to make subplots taller
+                        margin: { l: 80, r: 20, b: 60, t: 50 },  // Adjust margins to ensure titles are visible
                         shapes: []
                     }
                 };
@@ -228,7 +293,7 @@
                             const traceIndices = fig.data
                                 .map((d, i) => (d.name === trace.name ? i : null))
                                 .filter(i => i !== null);
-                                const currentVisibility = fig.data[traceIndices[0]].visible !== 'legendonly';
+                            const currentVisibility = fig.data[traceIndices[0]].visible !== 'legendonly';
                             Plotly.restyle('plot', { visible: currentVisibility ? 'legendonly' : true }, traceIndices);
                             legendItem.classList.toggle('deselected', currentVisibility);
                         };
@@ -243,6 +308,9 @@
 
             // Initial plot
             updatePlot();
+
+            // Update plot on window resize to handle mobile view
+            window.addEventListener('resize', updatePlot);
         }).catch(error => {
             console.error('Error loading or parsing data:', error);
         });
