Restore old title

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <body>
     <div class="hamburger" onclick="toggleSidebar()">&#9776;</div>
     <div class="sidebar" id="sidebar">
-        <h1>Interactive Data Visualization</h1>
+        <h1>Simplex transforms results</h1>
         <div>
             <label for="columnSelect">Select Column:</label>
             <select id="columnSelect">
