--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="menu-bar">
         <div>
-            <a href="/">Home</a>
+            <a href="index.html">Home</a>
         </div>
         <div class="hamburger" onclick="toggleSidebar()">☰</div>
     </div>
