--- a/index.html
+++ b/index.html
@@ -57,15 +57,26 @@
     </div>
     <script>
         d3.csv("results/summaries/all.csv").then(data => {
-            document.getElementById('columnSelect').addEventListener('change', () => plotSummary(data, document));
-            document.getElementById('logScaleSelect').addEventListener('change', () => plotSummary(data, document));
-            document.getElementById('estimateSelect').addEventListener('change', () => plotSummary(data, document));
+            function updatePlots() {
+                const selectedColumn = document.getElementById('columnSelect').value;
+                const selectedEstimate = document.getElementById('estimateSelect').value;
+                const logScale = document.getElementById('logScaleSelect').checked;
+                const isMobile = window.innerWidth <= 768;
+                const isNarrow = window.innerWidth <= 1200;
+                const numCols = isMobile ? 1 : isNarrow ? 2 : 3;
+                const filteredData = data.filter(row => (row.log_scale === 'True') === logScale && row.estimate === selectedEstimate)
+                plotSummary(filteredData, selectedColumn, numCols);
+            }
+
+            document.getElementById('columnSelect').addEventListener('change', () => updatePlots);
+            document.getElementById('logScaleSelect').addEventListener('change', () => updatePlots);
+            document.getElementById('estimateSelect').addEventListener('change', () => updatePlots);
 
             // Initial plot
-            plotSummary(data, document);
+            updatePlots();
 
             // Update plot on window resize to handle mobile view
-            window.addEventListener('resize', plotSummary);
+            window.addEventListener('resize', updatePlots);
         }).catch(error => {
             console.error('Error loading or parsing data:', error);
         });
