--- a/plots2.html
+++ b/plots2.html
@@ -6,6 +6,16 @@
     <title>Simplex transforms results</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script>
+        MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']]
+            }
+        };
+    </script>
+    <script id="MathJax-script" async
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+    </script>
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
@@ -45,13 +55,23 @@
                 <option value="entropy">entropy</option>
             </select>
         </div>
-        <h3>Legend</h3>
-        <div id="legend" class="legend">
-            <div id="legendContent" class="legendContent"></div>
+        <!-- Add slider for band probability -->
+        <div class="selector">
+            <label for="bandProbability">Band probability:</label>
+            <input type="range" id="bandProbability" min="0" max="1" step="0.01" value="0.8">
+            <output for="bandProbability" id="bandProbabilityOutput"></output>
+            <script>
+                function updateProbabilityOutput() {
+                    document.getElementById('bandProbabilityOutput').value = document.getElementById('bandProbability').value;
+                }
+                document.getElementById('bandProbability').addEventListener('input', updateProbabilityOutput);
+                updateProbabilityOutput();
+            </script>
         </div>
     </div>
     <div class="content">
         <h1>Simplex transforms results</h1>
+        <div id="columnInfo" class="callout"></div>
         <div id="plot-container">
             <div id="plot"></div>
         </div>
@@ -62,16 +82,15 @@
                 const selectedColumn = document.getElementById('columnSelect').value;
                 const selectedEstimate = document.getElementById('estimateSelect').value;
                 const logScale = document.getElementById('logScaleSelect').checked;
-                const isMobile = window.innerWidth <= 768;
-                const isNarrow = window.innerWidth <= 1200;
-                const numCols = isMobile ? 1 : isNarrow ? 2 : 3;
-                const filteredData = data.filter(row => (row.log_scale === 'True') === logScale && row.estimate === selectedEstimate)
-                plotSummary(filteredData, selectedColumn, numCols);
+                const bandProbability = parseFloat(document.getElementById('bandProbability').value);
+                const filteredData = data.filter(row => (row.log_scale === 'True') === logScale && row.estimate === selectedEstimate);
+                plotSummary2(filteredData, selectedColumn, bandProbability);
             }
 
-            document.getElementById('columnSelect').addEventListener('change', () => updatePlots);
-            document.getElementById('logScaleSelect').addEventListener('change', () => updatePlots);
-            document.getElementById('estimateSelect').addEventListener('change', () => updatePlots);
+            document.getElementById('columnSelect').addEventListener('change', updatePlots);
+            document.getElementById('logScaleSelect').addEventListener('change', updatePlots);
+            document.getElementById('estimateSelect').addEventListener('change', updatePlots);
+            document.getElementById('bandProbability').addEventListener('input', updatePlots);
 
             // Initial plot
             updatePlots();
