--- a/plots2.html
+++ b/plots2.html
@@ -55,7 +55,6 @@
                 <option value="entropy">entropy</option>
             </select>
         </div>
-        <!-- Add slider for band probability -->
         <div class="selector">
             <label for="bandProbability">Band probability:</label>
             <input type="range" id="bandProbability" min="0" max="1" step="0.01" value="0.8">
@@ -68,6 +67,10 @@
                 updateProbabilityOutput();
             </script>
         </div>
+        <div class="selector">
+            <label for="normalizeSelect">Normalized by best:</label>
+            <input type="checkbox" id="normalizeSelect">
+        </div>
     </div>
     <div class="content">
         <h1>Simplex transforms results</h1>
@@ -79,11 +82,16 @@
     <script>
         d3.csv("results/summaries/all.csv").then(data => {
             function updatePlots() {
-                const selectedColumn = document.getElementById('columnSelect').value;
+                let selectedColumn = document.getElementById('columnSelect').value;
                 const selectedEstimate = document.getElementById('estimateSelect').value;
                 const logScale = document.getElementById('logScaleSelect').checked;
                 const bandProbability = parseFloat(document.getElementById('bandProbability').value);
-                const filteredData = data.filter(row => (row.log_scale === 'True') === logScale && row.estimate === selectedEstimate);
+                const normalize = document.getElementById('normalizeSelect').checked;
+                let filteredData = data.filter(row => (row.log_scale === 'True') === logScale && row.estimate === selectedEstimate && row[selectedColumn] !== '');
+                if (normalize) {
+                    filteredData = addNormalizedByBestColumn(filteredData, selectedColumn);
+                    selectedColumn += '_normalized';
+                }
                 plotSummary2(filteredData, selectedColumn, bandProbability);
             }
 
@@ -91,6 +99,7 @@
             document.getElementById('logScaleSelect').addEventListener('change', updatePlots);
             document.getElementById('estimateSelect').addEventListener('change', updatePlots);
             document.getElementById('bandProbability').addEventListener('input', updatePlots);
+            document.getElementById('normalizeSelect').addEventListener('change', updatePlots);
 
             // Initial plot
             updatePlots();
