--- a/plots2.html
+++ b/plots2.html
@@ -36,6 +36,7 @@
             <label for="columnSelect">Metric:</label>
             <select id="columnSelect">
                 <option value="max_abs_rel_error">max_abs_rel_error</option>
+                <option value="rmsre">RMSRE</option>
                 <option value="min_rel_ess_per_chain">min_rel_ess_per_chain</option>
                 <option value="min_rel_ess_bulk">min_rel_ess_bulk</option>
                 <option value="max_rhat">max_rhat</option>
