Add condition numbers

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <script src="scripts/sidebar.js"></script>
     <script src="scripts/plots.js"></script>
+    <script src="scripts/utils.js"></script>
 
     <div class="menu-bar">
         <div>
@@ -32,13 +33,14 @@
                 <option value="max_rhat">max_rhat</option>
                 <option value="n_divergent">n_divergent</option>
                 <option value="bfmi">bfmi</option>
+                <option value="condition_number">condition_number</option>
             </select>
         </div>
         <div class="selector">
             <label for="logScaleSelect">Log-simplex:</label>
             <input type="checkbox" id="logScaleSelect" checked>
         </div>
-        <div class="selector">
+        <div class="selector" id="estimateSelector">
             <label for="estimateSelect">Estimate:</label>
             <select id="estimateSelect">
                 <option value="x_mean" selected>x_mean</option>
@@ -58,30 +60,44 @@
         </div>
     </div>
     <script>
-        d3.csv("results/summaries/all.csv").then(data => {
-            function updatePlots() {
-                const selectedColumn = document.getElementById('columnSelect').value;
-                const selectedEstimate = document.getElementById('estimateSelect').value;
-                const logScale = document.getElementById('logScaleSelect').checked;
-                const isMobile = window.innerWidth <= 768;
-                const isNarrow = window.innerWidth <= 1200;
-                const numCols = isMobile ? 1 : isNarrow ? 2 : 3;
-                const filteredData = data.filter(row => (row.log_scale === 'True') === logScale && row.estimate === selectedEstimate)
+        const columnSelector = document.getElementById('columnSelect');
+        const estimateSelector = document.getElementById('estimateSelector');
+        
+        function toggleEstimateSelector() {
+            const selectedColumn = columnSelector.value;
+            const isConditionNumber = selectedColumn === 'condition_number';
+            estimateSelector.style.display = isConditionNumber ? 'none' : 'block';
+        }
+
+        function updatePlots() {
+            const selectedColumn = columnSelector.value;
+            const selectedEstimate = estimateSelector.value;
+            const logScale = document.getElementById('logScaleSelect').checked;
+            const isMobile = window.innerWidth <= 768;
+            const isNarrow = window.innerWidth <= 1200;
+            const numCols = isMobile ? 1 : isNarrow ? 2 : 3;
+            d3.csv(getDataFile(columnSelector.value)).then(data => {
+                let filteredData = data.filter(row => (row.log_scale === 'True') === logScale)
+                if (data.columns.includes("estimate")) {
+                    filteredData = filteredData.filter(row => row.estimate === selectedEstimate);
+                }
                 plotSummary(filteredData, selectedColumn, numCols);
-            }
+            }).catch(error => {
+                console.error('Error loading or parsing data:', error);
+            });
+        }
 
-            document.getElementById('columnSelect').addEventListener('change', updatePlots);
-            document.getElementById('logScaleSelect').addEventListener('change', updatePlots);
-            document.getElementById('estimateSelect').addEventListener('change', updatePlots);
+        document.getElementById('columnSelect').addEventListener('change', toggleEstimateSelector);
+        document.getElementById('columnSelect').addEventListener('change', updatePlots);
+        document.getElementById('logScaleSelect').addEventListener('change', updatePlots);
+        document.getElementById('estimateSelect').addEventListener('change', updatePlots);
 
-            // Initial plot
-            updatePlots();
+        // Initial plot
+        toggleEstimateSelector();
+        updatePlots();
 
-            // Update plot on window resize to handle mobile view
-            window.addEventListener('resize', updatePlots);
-        }).catch(error => {
-            console.error('Error loading or parsing data:', error);
-        });
+        // Update plot on window resize to handle mobile view
+        window.addEventListener('resize', updatePlots);
     </script>
 </body>
 </html>
