--- a/plots2.html
+++ b/plots2.html
@@ -93,12 +93,12 @@
         }
     
         function updatePlots() {
-            let selectedColumn = document.getElementById('columnSelect').value;
+            let selectedColumn = columnSelector.value;
             const selectedEstimate = document.getElementById('estimateSelect').value;
             const logScale = document.getElementById('logScaleSelect').checked;
             const bandProbability = parseFloat(document.getElementById('bandProbability').value);
             const normalize = document.getElementById('normalizeSelect').checked;            
-            d3.csv(getDataFile(columnSelector.value)).then(data => {
+            d3.csv(getDataFile(selectedColumn)).then(data => {
                 let filteredData = data.filter(row => (row.log_scale === 'True') === logScale && row[selectedColumn] !== '');
                 if (data.columns.includes("estimate")) {
                     filteredData = filteredData.filter(row => row.estimate === selectedEstimate);
@@ -113,8 +113,8 @@
             });
         }
 
-        document.getElementById('columnSelect').addEventListener('change', toggleEstimateSelector);
-        document.getElementById('columnSelect').addEventListener('change', updatePlots);
+        columnSelector.addEventListener('change', toggleEstimateSelector);
+        columnSelector.addEventListener('change', updatePlots);
         document.getElementById('logScaleSelect').addEventListener('change', updatePlots);
         document.getElementById('estimateSelect').addEventListener('change', updatePlots);
         document.getElementById('bandProbability').addEventListener('input', updatePlots);
